--- a/automated-robot-suite/Config/config.ini
+++ b/automated-robot-suite/Config/config.ini
@@ -1,13 +1,13 @@
 [general]
-LOG_PATH = /tmp/logs
+LOG_PATH = /buildarea4/jhuang0/team_share/stx/stx-test/test/automated-robot-suite/Results/20221129094916_Provision
 IP_UNIT_0_ADDRESS = 10.10.10.3
-IP_UNIT_1_ADDRESS = 10.10.10.4
+IP_UNIT_1_ADDRESS = 
 CIRROS_FILE = cirros-0.4.0-x86_64-disk.img
 CENTOS_FILE = CentOS-7-x86_64-GenericCloud.qcow2
 UBUNTU_FILE = xenial-server-cloudimg-amd64-disk1.qcow2
 WINDOWS_FILE = windows_server_2012_r2.qcow2
-APP_TARBALL = stx-openstack.tgz
-STX_ISO_FILE = bootimage.iso
+APP_TARBALL = stx-openstack-1.0-140-centos-stable-versioned.tgz
+STX_ISO_FILE = inf-image-centos-all-x86-64.iso
 ENV_YAML_FILE = Qemu/qemu_setup.yaml
 CONFIGURATION_TYPE = simplex
 ENVIRONMENT = virtual
@@ -18,7 +18,7 @@ STX_DEPLOY_USER_NAME = sysadmin
 STX_DEPLOY_USER_PSWD = St4rlingX*
 
 [iso_installer]
-KERNEL_OPTION = 0
+KERNEL_OPTION = 3
 VIRSH_CMD = virsh -c qemu:///system console controller-0
 VMLINUZ = vmlinuz append rootwait
 CONSOLES = console=tty0,115200 console=ttyS0,115200 inst.text
@@ -31,13 +31,13 @@ OPTS_2 = boot_device=sda rootfs_device=sda biosdevname=0 usbcore.autosuspend=-1 
 SEC_PROF_1 = security_profile=standard
 SEC_PROF_2 = security_profile=extended
 INITRD = initrd=initrd.img
-BOOT_TIMEOUT = 1200
-CONFIG_CONTROLLER_TIMEOUT = 3600
+BOOT_TIMEOUT = 4800
+CONFIG_CONTROLLER_TIMEOUT = 7200
 CONTROLLER_TMP_IP = 10.10.10.3
 CONTROLLER_TMP_GATEWAY = 10.10.10.1
 
 [logical_interface]
-OAM = enp2s1
+OAM = ens3
 MGMT = enp2s2
 
 [baremetal]
@@ -52,3 +52,4 @@ PROFILE = nk0f1p65.automation
 [qemu]
 XML = /etc/libvirt/qemu/networks/autostart/default.xml
 CONFIG_FILE = /etc/libvirt/qemu.conf
+
