Test config for inf G centos and o2 2022-11-30
Signed-off-by: Jackie Huang <jackie.huang@windriver.com>

--- a/automated-robot-suite/Config/config.ini
+++ b/automated-robot-suite/Config/config.ini
@@ -1,5 +1,5 @@
 [general]
-LOG_PATH = /buildarea4/jhuang0/team_share/stx/stx-test/test/automated-robot-suite/Results/20221129094916_Provision
+LOG_PATH = /buildarea4/jhuang0/team_share/oran/test/automated-robot-suite/Results/20221130213925_Provision
 IP_UNIT_0_ADDRESS = 10.10.10.3
 IP_UNIT_1_ADDRESS = 
 CIRROS_FILE = cirros-0.4.0-x86_64-disk.img
@@ -15,7 +15,7 @@ CONFIGURATION_FILE = stx-simplex.yml
 
 [credentials]
 STX_DEPLOY_USER_NAME = sysadmin
-STX_DEPLOY_USER_PSWD = St4rlingX*
+STX_DEPLOY_USER_PSWD = Li69nux*
 
 [iso_installer]
 KERNEL_OPTION = 3
@@ -45,7 +45,7 @@ HTTP_SERVER = 192.168.200.3
 
 [dashboard]
 HORIZON_USERNAME = admin
-HORIZON_PASSWORD = St4rlingX*
+HORIZON_PASSWORD = Li69nux*
 BROWSER = firefox
 PROFILE = nk0f1p65.automation
 
